# Gravity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  performance_report.md
.github/workflows/: ci.yml  release-gate.yml
apps/gravitybench/: Cargo.toml
apps/gravitybench/src/: main.rs
apps/gravityd/: Cargo.toml
apps/gravityd/src/: main.rs
config/: amm.toml  api.toml  database.toml  feeds.toml  gravity.toml  hardware.toml  index.toml  jit.toml  liquidator.toml  markets.toml  ops.toml  oracle.toml  performance-final.toml  performance.toml  perps.toml  recovery.toml  risk.toml  security.toml  stream.toml  tile-runtime.toml  tile.toml  wal.toml  wire.toml
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/amm/: Cargo.toml
crates/amm/src/: lib.rs
crates/amm/tests/: amm_invariants.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/book/: Cargo.toml
crates/book/src/: lib.rs
crates/book/tests/: security_invariants.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/database/: Cargo.toml
crates/database/migrations/: 0001-oracle.sql  0002-market-events.sql  0003-counters.sql  0004-orderbook.sql  0005-book-events.sql  0006-audit.sql  0007-persistence.sql  0008-clob-production.sql  0009-settlement-finalization.sql  0010-production-oracle.sql  0011-amm.sql  0012-risk.sql  0013-liquidations.sql  0014-wal.sql  0015-amm-hardening.sql  0016-perps.sql  0017-index.sql  0018-stream.sql  0019-database-integration.sql  0020-api-contract.sql
crates/database/src/: lib.rs
crates/hardware/: Cargo.toml
crates/hardware/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/index/tests/: index_invariants.rs
crates/liquidator/: Cargo.toml
crates/liquidator/src/: lib.rs
crates/market/: Cargo.toml
crates/market/src/: lib.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: lib.rs
crates/perf/: Cargo.toml
crates/perf/src/: lib.rs
crates/perf/tests/: perf.rs
crates/perps/: Cargo.toml
crates/perps/src/: lib.rs
crates/perps/tests/: perps_invariants.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/risk/tests/: risk_invariants.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: lib.rs
crates/settlement/tests/: settlement_invariants.rs
crates/stream/: Cargo.toml
crates/stream/src/: lib.rs
crates/tile/: Cargo.toml
crates/tile/src/: lib.rs
crates/tile/tests/: jit_equivalence.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/types/tests/: financial_correctness.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs
crates/wal/tests/: replay_invariants.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
docs/: AMM-HARDENING.md  AMM-RUNTIME.md  AMM.md  API-CONTRACT.md  API.md  ARCHITECTURE.md  AUDIT.md  AUTOTUNING.md  BINARY-INTAKE.md  BINARY-PROTOCOL-CONTRACT.md  CLOB-CORRECTNESS.md  CLOB-PRODUCTION.md  DATABASE-INTEGRATION.md  DATABASE.md  ERROR-CATALOG.md  EXCHANGE-ADAPTERS.md  HARDWARE-RUNTIME.md  HOT-COLD-STORAGE.md  INDEX-RUNTIME.md  JIT-KERNELS.md  JIT.md  LIQUIDATION-RUNTIME.md  MAP.md  MARKET-DATA.md  MARKET-WORKERS.md  OBSERVABILITY-OPS.md  ORACLE-PRODUCTION.md  ORACLE.md  ORDERBOOK.md  PARALLEL-EXECUTION.md  PERFORMANCE-FINALIZATION.md  PERFORMANCE-VALIDATION.md  PERFORMANCE.md  PERPS-RUNTIME.md  PROFILING.md  README.md  REFERENCES.md  REPLAY.md  RISK-RUNTIME.md  RISK.md  (+16 more)
docs/openapi/: gravity-v3.5.0.json
scripts/: bench.bat  bench.sh  build.bat  build.sh  profile.bat  profile.sh  release-gate.bat  release-gate.sh  release.bat  release.sh  start.bat  start.sh  stop.bat  stop.sh  test.bat  test.sh  validate-release.bat  validate-release.sh
tests/integration/: README.md
tests/property/: README.md
tests/replay/: README.md
tests/stress/: README.md
