[workspace]
resolver = "2"
members = [
  "crates/types",
  "crates/config",
  "crates/market",
  "crates/adapters",
  "crates/book",
  "crates/amm",
  "crates/risk",
  "crates/liquidator",
  "crates/perps",
  "crates/index",
  "crates/stream",
  "crates/wal",
  "crates/oracle",
  "crates/settlement",
  "crates/wire",
  "crates/tile",
  "crates/hardware",
  "crates/perf",
  "crates/api",
  "crates/core",
  "crates/database",
  "crates/worker",
  "apps/gravityd",
  "apps/gravitybench",
]

[workspace.package]
edition = "2021"
rust-version = "1.77"
version = "3.7.0"
authors = ["Ascension Development"]
license = "MIT"
repository = "https://github.com/ascension-labs/gravity"
description = "High-performance DeFi service layer for Ascension."

[workspace.dependencies]
async-trait = "0.1"
crossbeam-channel = "0.5"
core_affinity = "0.8"
axum = { version = "0.8", features = ["macros", "ws"] }
dashmap = "6.1"
redis = { version = "1.2", default-features = false, features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
all = "warn"
pedantic = "allow"
nursery = "allow"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
