[package]
name = "gravity-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
gravity-market = { path = "../market" }
gravity-types = { path = "../types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
