[package]
name = "gravity-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
gravity-config = { path = "../config" }
gravity-database = { path = "../database" }
gravity-market = { path = "../market" }
gravity-oracle = { path = "../oracle" }
gravity-settlement = { path = "../settlement" }
gravity-types = { path = "../types" }
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
