[package]
name = "gravity-liquidator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
gravity-risk = { path = "../risk" }
gravity-types = { path = "../types" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
