[package]
name = "gravity-settlement"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
gravity-book = { path = "../book" }
gravity-types = { path = "../types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
