[package]
name = "gravity-tile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
cranelift-jit = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]

[dependencies]
crossbeam-channel.workspace = true
core_affinity.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
cranelift-codegen = { version = "0.125", optional = true }
cranelift-frontend = { version = "0.125", optional = true }
cranelift-jit = { version = "0.125", optional = true }
cranelift-module = { version = "0.125", optional = true }
cranelift-native = { version = "0.125", optional = true }

[lints]
workspace = true
